Blender 3.4.0 Alpha does not use Wayland under Linux yet... #101715

Closed
opened 2022-10-10 07:09:30 +02:00 by Anton Raves · 13 comments

System Information
Operating system: Linux-5.19.14-300.fc37.x86_64-x86_64-with-glibc2.36 64 Bits
Graphics card: Mesa Intel(R) Iris(R) Pro Graphics 6200 (BDW GT3) Intel 4.6 (Core Profile) Mesa 22.2.0

Blender Version
Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-10 00:22, hash: a24f11e0ec
Worked: not applicable

Short description of error
Blender 3.4.0 Alpha does not use Wayland under Linux yet...

Exact steps for others to reproduce the error
Just launching Blender 3.4.0 `a24f11e0ec on Fedora Linux 37 Workstation Beta with GNOME 43, running in Wayland mode. It will show in the alternative Blender About screen that the windowing system used is X11, not Wayland:

Screenshot from 2022-10-10 07-05-49.png

**System Information** Operating system: Linux-5.19.14-300.fc37.x86_64-x86_64-with-glibc2.36 64 Bits Graphics card: Mesa Intel(R) Iris(R) Pro Graphics 6200 (BDW GT3) Intel 4.6 (Core Profile) Mesa 22.2.0 **Blender Version** Broken: version: 3.4.0 Alpha, branch: master, commit date: 2022-10-10 00:22, hash: `a24f11e0ec` Worked: not applicable **Short description of error** Blender 3.4.0 Alpha does not use Wayland under Linux yet... **Exact steps for others to reproduce the error** Just launching Blender 3.4.0 `a24f11e0ec on Fedora Linux 37 Workstation Beta with GNOME 43, running in Wayland mode. It will show in the alternative Blender About screen that the windowing system used is X11, not Wayland: ![Screenshot from 2022-10-10 07-05-49.png](https://archive.blender.org/developer/F13646592/Screenshot_from_2022-10-10_07-05-49.png)
Author

Added subscriber: @Memento

Added subscriber: @Memento
Author

This comment was removed by @Memento

*This comment was removed by @Memento*

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Could you try install libdecor?

https://packages.fedoraproject.org/pkgs/libdecor/libdecor/

Committed f77eadc203 so this prints a warning for libdecor being the only reason wayland could not be used.

Could you try install libdecor? https://packages.fedoraproject.org/pkgs/libdecor/libdecor/ Committed f77eadc203 so this prints a warning for libdecor being the only reason wayland could not be used.
Author

I entered:

sudo dnf install libdecor

in the Terminal and got a message back:

Package libdecor-0.1.0-3.fc37.x86_64 is already installed.
Dependencies resolved.
Nothing to do.
I entered: ``` sudo dnf install libdecor ``` in the Terminal and got a message back: ``` Package libdecor-0.1.0-3.fc37.x86_64 is already installed. Dependencies resolved. Nothing to do. ```

Committed b51d337adc (will be in the daily build shortly).

Please run Blender from a terminal and paste the output here.

Committed b51d337adc (will be in the daily build shortly). Please run Blender from a terminal and paste the output here.
Author

Here you are:

[useroftheday@fedora ~]$ blender-3.4.0-alpha+master.b51d337adc13-linux.x86_64-release/blender
Unable to find 'libwayland-egl.so'
Read prefs: /home/useroftheday/.config/blender/3.4/config/userpref.blend
Info: Total files 0 | Changed 0 | Failed 0
Saved session recovery to '/tmp/quit.blend'

Blender quit

Would you like me to:

sudo dnf install libwayland-egl
Here you are: ``` [useroftheday@fedora ~]$ blender-3.4.0-alpha+master.b51d337adc13-linux.x86_64-release/blender Unable to find 'libwayland-egl.so' Read prefs: /home/useroftheday/.config/blender/3.4/config/userpref.blend Info: Total files 0 | Changed 0 | Failed 0 Saved session recovery to '/tmp/quit.blend' Blender quit ``` Would you like me to: ``` sudo dnf install libwayland-egl ```
Author

That resulted into this:

[userofthedays@fedora ~]$ sudo dnf install libwayland-egl
[sudo] password for useroftheday: 
Last metadata expiration check: 0:33:28 ago on Tue 11 Oct 2022 06:10:47 AM CEST.
Package libwayland-egl-1.21.0-1.fc37.x86_64 is already installed.
Dependencies resolved.
Nothing to do.
Complete!
[useroftheday@fedora ~]$ /opt/blender/blender
Unable to find 'libwayland-egl.so'
Read prefs: /home/useroftheday/.config/blender/3.4/config/userpref.blend
Saved session recovery to '/tmp/quit.blend'

Blender quit

That resulted into this: ``` [userofthedays@fedora ~]$ sudo dnf install libwayland-egl [sudo] password for useroftheday: Last metadata expiration check: 0:33:28 ago on Tue 11 Oct 2022 06:10:47 AM CEST. Package libwayland-egl-1.21.0-1.fc37.x86_64 is already installed. Dependencies resolved. Nothing to do. Complete! [useroftheday@fedora ~]$ /opt/blender/blender Unable to find 'libwayland-egl.so' Read prefs: /home/useroftheday/.config/blender/3.4/config/userpref.blend Saved session recovery to '/tmp/quit.blend' Blender quit ```
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

It seems this was confirmed on chat and a fix is underway.

It seems this was confirmed on chat and a fix is underway.

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2022-10-11 10:31:18 +02:00

Fixed 70ef334f08

Fixed 70ef334f08
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101715
No description provided.